--- a/src/componets/Header.scss
+++ b/src/componets/Header.scss
@@ -14,9 +14,13 @@
 
   &__logo {
     margin-left: 40px; /* Відступ зліва */
-    img {
-      height: 50px; /* Висота логотипу, змініть за необхідності */
-    }
+    width: 114px; /* Ширина текстового логотипу */
+    height: 31px; /* Висота текстового логотипу */
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem; /* Регулюйте розмір шрифту за потреби */
+    // font-weight: bold; /* Жирний шрифт */
+    color: #212529; /* Колір тексту логотипу */
   }
 
   &__search {
@@ -61,10 +65,13 @@
     &-link {
       color: #333;
       text-decoration: none;
-      font-size: 1rem;
-      font-weight: 500;
+      font-size: 0.875rem; /* Розмір шрифту (приблизно H5) */
+      font-weight: 600; /* Товщина шрифту */
+      text-transform: uppercase; /* Великі літери */
       padding: 0.5rem;
       transition: color 0.3s ease;
+      text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Тінь для тексту */
+      letter-spacing: 1px; /* Розрядка для більшого контрасту */
 
       &:hover {
         color: #000;
@@ -76,8 +83,7 @@
     display: flex;
     align-items: center;
     margin-right: 40px; /* Відступ справа */
-    gap: 8px;
-    // border-radius: 12px; /* Круглі кути */
+    gap: 8px; /* Відстань між кнопкою та іконкою */
     overflow: hidden; /* Прибираємо кути для іконки */
 
     &__button {
@@ -85,7 +91,7 @@
       background-color: #336B46;
       color: white;
       border: none;
-      border-radius: 12px; /* Круглі кути зліва */
+      border-radius: 12px; /* Округлі кути для кнопки */
       cursor: pointer;
       transition: background-color 0.3s ease;
       font-size: 1rem;
@@ -93,10 +99,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      width: 220px;
       height: 48px;
 
       &:hover {
-        background-color: #2d5e3e;
+        background-color: #2d5e3e; /* Зміна кольору при наведенні */
       }
     }
 
@@ -104,10 +111,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      // width: 48px;
-      // height: 48px;
-      // background-color: #336B46;
-      // border-radius: 0 25px 25px 0; /* Круглі кути справа */
       cursor: pointer;
 
       img {
