--- a/src/componets/Hero.scss
+++ b/src/componets/Hero.scss
@@ -98,6 +98,7 @@
 
   &__highlighted-text {
     padding-left: 135px;
+    font-family: 'Vujahday Script', sans-serif;
     font-size: 6rem; /* Розмір шрифту виділеного тексту */
     font-style: italic; /* Курсив для виділеного тексту */
     font-weight: 400;
