--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 /* main.scss */
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Vujahday+Script&display=swap');
+
 
 /* Variables */
 :root {
@@ -15,5 +17,5 @@ body, h1, p {
 }
 
 body {
-  // font-family: var(--font-stack);
+  font-family: 'Mulish', sans-serif;
 }
