--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -7,7 +7,7 @@
   padding: 1rem 0; /* Прибираємо бокові падінги тут */
   background-color: rgba(255, 255, 255, 0.3); /* Напівпрозорий фон */
   backdrop-filter: blur(10px); /* Додає розмиття фону */
-  position: absolute;
+  // position: absolute;
   width: 100%;
   top: 0;
   z-index: 1000;
