--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -11,7 +11,7 @@
     backdrop-filter: blur(10px);
     /* Додає розмиття фону */
     // position: absolute;
-    width: 100%;
+    width: 1440px;
     top: 0;
     z-index: 1000;
 
