--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -8,7 +8,7 @@
   background-color: rgba(255, 255, 255, 0.3); /* Напівпрозорий фон */
   backdrop-filter: blur(10px); /* Додає розмиття фону */
   // position: absolute;
-  width: 100%;
+  width: 1440px;
   top: 0;
   z-index: 1000;
 
