--- a/src/components/RandomWine.scss
+++ b/src/components/RandomWine.scss
@@ -2,12 +2,11 @@
 
 .second-page {
   width: 100%;
-  height: 100vh; /* Висота на весь екран */
+  height: 895px; /* Висота на весь екран */
   display: flex;
   align-items: center;
   justify-content: center;
   background: url('../img/second-screen.png') center center / cover no-repeat; /* Фон */
-  padding: 2rem;
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
@@ -20,36 +19,40 @@
     justify-content: center;
     max-width: 1200px;
     width: 100%;
-    padding: 2rem;
   }
 
   &__title {
-    font-size: 3rem;
-    font-weight: 700;
+    font-size: 100px;
+    font-weight: 500;
     margin: 0;
+    margin-left: 40px;
+    line-height: 1;
     color: #333;
   }
 
   &__sub-title {
-    font-size: 1.5rem;
+    font-size: 28px;
     color: #4CAF50; /* Колір зеленого підзаголовку */
-    margin: 0.5rem 0 1.5rem 0;
     font-style: italic;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 97px;
+    line-height: 1.2;
   }
 
   &__details {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    margin-left: 155px;
   }
 
   &__rating {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
+    width: 200px;
     color: #333;
-    font-size: 1.25rem;
+    font-size: 16px;
+    line-height: 1.4;
+    margin-bottom: 40px;
 
     &__stars {
       color: gold; /* Колір зірочок */
@@ -62,27 +65,41 @@
   }
 
   &__wine-name {
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.2;
     margin: 0;
+    margin-bottom: 20px;
   }
+
+  &__wine-wrapper {
+      display: flex;
+      gap: 20px;
+      align-items: flex-start;
+      margin-bottom: 60px;
+    }
+
+  &__wine-weight {
+    font-weight: 600;
+   } 
 
   &__wine-info {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 1rem;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 5px;
 
     li {
       display: flex;
-      justify-content: space-between;
+      justify-content: start;
       gap: 1rem;
 
       span {
         font-weight: 600;
+        line-height: 1.4;
         color: #333;
       }
     }
@@ -104,11 +121,27 @@
     }
   }
 
+    &__image-wrapper {
+      position: absolute;
+      top: 157px;
+      right: 10%;
+      bottom: 0;
+      width: 609px;
+      height: 816px;
+      background: url('../img/star.png') center no-repeat;
+      // background-color: #5C9F5E;
+      // background-image: linear-gradient(189.45deg, rgba(255, 255, 255, 0.3) 30%, rgba(241, 243, 245, 0.3) 30%);
+        /* Фон */
+      object-fit: contain;
+    }
+
   &__image {
     position: absolute;
-    right: 10%;
-    bottom: 0;
-    height: 80vh;
+    left: 150px;
+    top: 150px;
+    width: 319px;
+    height: 530px;
     object-fit: contain;
   }
+  
 }
