--- a/src/components/Filters.scss
+++ b/src/components/Filters.scss
@@ -1,32 +1,93 @@
 .filters {
-position: relative;
-display: flex;
 width: 100%;
 padding: 40px;
+background-color: #F1F3F5;
+&__wrapper {
+display: flex;
+gap: 20px;
+}
+&__sub-title {
+    font-size: 24px;
+    line-height: 1.3;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 20px;
+}
 &__label {
     display: inline-block;
+    // margin-right: 30px;
     // margin-left: 1000px;
     &-wrapper {
-    position: absolute;
-    right: 200px;
+    // position: absolute;
+    // right: 200px;
     width: 180px;
     height: 48px;
     border: 1px solid black;
     border-radius: 12px;
     padding: 13px 26px 13px 26px;
+    margin-left: auto;
     }
-   
 }
-    &__select {
-        display: block;
-        border: none;
+&__select {
+    display: block;
+    border: none;
     }
-    &__content {
-     width: 440px;
+&__content {
+    width: 440px;
+    // margin-top: 100px;
  }
-  &__form {
-     display: flex;
-     flex-direction: column;
+&__form {
+    display: flex;
+    flex-direction: column;
   }
-  
+&__range {
+    width: 440px;
+    height: 54px;
+    border: 1px solid #CDD0D3;
+    border-radius: 12px;
+    margin-bottom: 60px;
+    
+}  
+&__range-input {
+    width: 100%;
+    // height: 54px;
+    margin-top: 30px;
+    
+}
+&__country-input {
+    display:flex;
+    gap: 20px;
+    align-items:center;
+    width: 100%;
+    height: 48px;
+    padding: 16px;
+    margin-bottom: 20px;
+    border: 1px solid #CDD0D3;
+    border-radius: 12px;
+    
+
+    & input {
+border: none;
+background-color: #F1F3F5;
+    }
+        
+    
+}
+&__buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-bottom: 60px;
+}
+&__buttons-text {
+    font-size: 18px ;
+    line-height: 1.4;
+    font-weight: 600;
+    color: #336B46;
+}
+&__cardList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
 }
