--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -13,9 +13,12 @@ height: 412px;
     font-size: 100px;
     line-height: 1;
     font-weight: 500;
+    margin: 0;
+    margin-bottom: 40px;
 }
 &__input {
-    width: 1084px;
+    max-width: 1084px;
+    width: 100%;
     height: 48px;
     border: 1px solid #F1F3F5;
     border-radius: 12px;
@@ -53,5 +56,9 @@ height: 412px;
     line-height: 1.3;
     font-weight: 500;
 }
-
+&__form {
+    display: flex;
+    width: 100%;
+    height: 48px;
+}
 }
