--- a/src/pages/OurTeam/OurTeam.scss
+++ b/src/pages/OurTeam/OurTeam.scss
@@ -1,12 +1,29 @@
 .ourTeam {
     width: 100%;
+
     &__hero {
       display: flex;
-      padding: 0;
-      background: url('../../img/second-screen.png') center center / cover no-repeat;
-         /* Фон */
-               
+      flex-direction: column;
+      gap: 20px;
+      background: url('../../img/second-screen.png') center center / cover no-repeat;  /* Фон */       
     }
+      @media screen and (min-width: 391px) {
+    &__hero {
+      flex-direction: row;
+      gap: 40px;
+      padding: 0;
+      min-height: 490px;    
+    }
+  }
+
+        &__content {
+      width: 100%;
+      margin-top: 60px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+
+        @media screen and (min-width: 391px) {
     &__content {
        width: 670px;
        height: 286px;
@@ -14,65 +31,130 @@
        padding-bottom: 100px;
        padding-left: 40px;
     }
+  }
+
+          &__content-name {
+        font-size: 16px;
+        line-height: 1.4;
+        font-weight: 400;
+    }
+
         &__content-text {
          width: 100%;
          font-size: 16px;
          line-height: 1.4;        
    }
+
+       &__title {
+      font-size: 24px;
+      line-height: 1.3;
+      font-weight: 500;
+    }
+    @media screen and (min-width: 391px) {
     &__title {
       font-size: 40px;
       line-height: 1.2;
-      font-weight: 500;
     }
+  }
+
+    &__bg {
+      width: 350px;
+      height: 277px;
+      background-image: url("../../img/Mobile/starMobile.png");
+      background-repeat: cover;
+    }
+        @media screen and (min-width: 391px) {
     &__bg {
       width: 670px;
+      height: auto;
       background-image: url("../../img/star.png");
       background-repeat: no-repeat;
     }
+  }
 
+      &__team-image {
+      width: 100%;
+      border-radius: 12px;   
+    }
+   @media screen and (min-width: 391px) {
     &__team-image {
       width: 670px;
       height: 484px;
-      border-radius: 12px;   
     }
+  }
 
-    &__wrapper {
+        &__wrapper {
      display: flex;
+     flex-direction: column;
      gap: 10px;
      margin-top: 40px;
     }
-     &__team {
-      width: 100%;
-      padding: 80px 40px 80px 40px;
-      background-color: #F1F3F5;
-         /* Фон */        
+    @media screen and (min-width: 391px) {
+    &__wrapper {
+     display: flex;
+     flex-direction: row;
+     gap: 10px;
+     margin-top: 40px;
     }
-      &__team-title {
-          font-size: 100px;
+  }
+       &__team {
+      width: 100%;
+      padding: 0 20px 0 20px;
+      background-color: #F1F3F5; /* Фон */        
+    }
+    @media screen and (min-width: 391px) {
+     &__team {
+      padding: 80px 40px 80px 40px;     
+    }
+  }
+
+          &__team-title {
+          font-size: 40px;
           font-weight: 500;
           margin: 0;
-          margin-bottom: 20px;
-          line-height: 1;
+          margin-bottom: 10px;
+          line-height: 1.2;
           color: #333;
         }
+        @media screen and (min-width: 391px) {
+      &__team-title {
+          font-size: 100px;
+          margin-bottom: 20px;
+          line-height: 1;
+        }
+      }
     
-      &__team-sub-title {
-          font-size: 28px;
-          color: #4CAF50;
-          /* Колір зеленого підзаголовку */
+            &__team-sub-title {
+          font-size: 20px;
+          color: #4CAF50;  /* Колір зеленого підзаголовку */
           font-style: italic;
-          margin-left: 300px;
-          margin-right: auto;
+          text-align: right;
           line-height: 1.2;
         }
+     @media screen and (min-width: 391px) {
+      &__team-sub-title {
+          font-size: 28px;
+        }
+      }
+
       &__members {
         display: flex;
+        flex-direction: column;
+        gap: 10px;
+        row-gap: 40px;
+        width: 100%;
+        padding: 0;
+      }  
+     @media screen and (min-width: 391px) {
+      &__members {
+        flex-direction: row;
         gap: 10px;
         row-gap: 40px;
         flex-wrap: wrap;
         width: 670px;
         padding: 0;
       }  
+    }
       &__member {
         width: 325px;
         list-style: none;
@@ -81,14 +163,23 @@
         font-size: 16px;
         line-height: 1.4;
       }
-      &__name {
-        font-size: 40px;
-        line-height: 1.2;
+
+        &__name {
+        font-size: 24px;
+        line-height: 1.3;
         font-weight: 500;
         margin: 0;
         margin-top: 20px;
         margin-bottom: 10px;
       }
+      @media screen and (min-width: 391px) {
+      &__name {
+        font-size: 40px;
+        line-height: 1.2;
+        margin-top: 20px;
+        margin-bottom: 10px;
+      }
+    }
       &__role {
         font-size: 16px;
         line-height: 1.4;
