--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -3,17 +3,33 @@
 
     &__hero {
         width: 100%;
+        padding: 120px 20px 120px 20px;
+      }
+      @media screen and (min-width: 391px) {
+    &__hero {
         padding: 100px 40px 100px 40px;
     }
+  }
+
+     &__title {
+      width: 350px;
+      height: 159px;
+      font-size: 44px;
+      line-height: 1.2;
+      font-weight: 500;
+      color: #212529;
+      margin: 0;
+            }
+      @media screen and (min-width: 391px) {
     &__title {
         width: 1100px;
         height: 225px;
         font-size: 100px;
         line-height: 1;
         font-weight: 500;
-        color: #212529;
-        margin: 0;
     }
+  }
+
      & span {
         position: absolute;
         left: 850px;
@@ -22,14 +38,38 @@
         font-size: 130px;
         line-height: 1;   
     }
+
+
+         &__section {
+           display: flex;
+           flex-direction: column;
+           gap: 48px;
+           width: 100%;
+           padding: 60px 20px 60px 20px;
+           background-color: #F1F3F5;
+    
+         }
+            @media screen and (min-width: 391px) {
      &__section {
-        display: flex;
+        flex-direction: row;
         gap: 90px;
         width: 100%;
         padding: 80px 40px 80px 40px;
         background-color: #F1F3F5;
-
     }
+  }
+
+       &__section-content {
+      width: 100%;
+      // height: 516px;
+      padding: 0;
+      margin-top: 40px;
+
+      & p {
+        margin-top: 30px;
+      }
+    }
+  @media screen and (min-width: 391px) {
      &__section-content {
       width: 670px;
       height: 516px;
@@ -40,6 +80,8 @@
         margin-top: 30px;
       }
     }
+  }
+
     &__section-title {
       font-size: 40px;
       line-height: 1.2;
@@ -47,24 +89,54 @@
       margin: 0;
       margin-top: 30px;
     }
-    &__section-thumb {
-    width: 600px;
-    height: 644px;
+
+     &__section-thumb {
+    width: 100%;
+    // height: 644px;
     border: none;
     border-radius: 12px;
     }
 
+        @media screen and (min-width: 391px) {
+    &__section-thumb {
+    width: 600px;
+    height: 644px;
+    }
+  }
+
     &__section-thumb>img {
     display: block;
     height: 100%;
-    width: 600px;
+    width: 100%;
     object-fit: cover;
     }
+        @media screen and (min-width: 391px) {
+    &__section-thumb>img {
+    width: 600px;
+    }
+  }
+
     &__choose {
     width: 100%;
-    padding: 80px 40px 80px 40px;
+    padding: 60px 20px 60px 20px;
     background-color: #F1F3F5;
     }
+       @media screen and (min-width: 391px) {
+    &__choose {
+    padding: 80px 40px 80px 40px;
+    }
+  }
+
+      &__choose-title {
+    width: 100%;
+    // height: 100px;
+    font-size: 40px;
+    line-height: 1.2;
+    font-weight: 500;
+    color: #212529;
+    margin: 0;
+    }
+       @media screen and (min-width: 391px) {
     &__choose-title {
     width: 1015px;
     height: 100px;
@@ -74,6 +146,19 @@
     color: #212529;
     margin: 0;
     }
+  }
+
+      &__choose-sub {
+    font-family: Vujahday Script;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #5C9F5E;
+    text-align: right;
+    margin: 0;
+    margin-left: 20px;
+    margin-top: 10px;
+   }
+       @media screen and (min-width: 391px) {   
     &__choose-sub {
     font-family: Vujahday Script;
     font-size: 28px;
@@ -83,13 +168,16 @@
     margin: 0;
     margin-top: 10px;
    }
+  }
+
    &__container {
     width: 100%;
     
     }
+
   &__container-item {
-    width: 440px;
-    height: 208px;
+    width: 100%;
+    // height: 208px;
     & img {
       display: block;
       width: 100%;
@@ -97,18 +185,40 @@
       object-fit: cover;
     }
     }
+      
+      @media screen and (min-width: 391px) {   
+  &__container-item {
+    width: 440px;
+    height: 208px;
+    }
+  }
+
+      &__container-title {
+     max-width: 104px;
+     font-size: 24px;
+     line-height: 1.3;
+     font-weight: 500;
+     margin: 10px 0 10px 0;
+   }
+         @media screen and (min-width: 391px) {   
     &__container-title {
      max-width: 300px;
      font-size: 40px;
      line-height: 1.2;
-     font-weight: 500;
      margin: 10px 0 10px 0;
    }
+  }
         &__container-text {
-          width: 356px;
+          width: 100%;
           font-size: 16px;
           line-height: 1.4;
         }
+       @media screen and (min-width: 391px) {     
+        &__container-text {
+          width: 356px;
+        }
+      }
+
     &__container-longImage {
            width: 808px;
            height: 246px;
@@ -121,9 +231,20 @@
              object-fit: cover;
            }
          }
+
    &__wrapper {
     display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 40px;
+  }    
+       @media screen and (min-width: 391px) {
+   &__wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
     justify-content: space-between;
     margin-top: 60px;
   }
+}
 }
